fix: aumenta o breakpoint do navbar collapse na home page (term mais menus na home, por isso precisa de um collapse maior)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1220,13 +1220,6 @@ h1, h2, h3, h4, h5, h6 {
   width: 25px;
   border-bottom: none !important;
 }
-/* TODO Fix Elate's theme navbar issue */
-/* @media screen and (max-width: 768px) { */
-@media screen and (max-width: 767px) {
-  .fh5co-nav-toggle {
-    display: block;
-  }
-}
 
 #footer {
   padding: 50px 0;
